[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/combat/hitbox.gd" type="Script" id=1]

[node name="Hitbox" type="Area2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="on_area_entered"]
[connection signal="area_exited" from="." to="." method="on_area_exited"]
[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="body_exited" from="." to="." method="on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="on_timer_timeout"]
